--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.5.6"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.1",
+    "prettier": "^2.8.8"
   },
   "scripts": {
     "start": "react-scripts start",
