--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "zustand": "^5.0.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.1",
-    "prettier": "^2.8.8"
+    "postcss": "^8.5.3",
+    "prettier": "^2.8.8",
+    "tailwindcss": "^4.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
