--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "env-cmd": "^10.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-fullpage": "^0.1.19",
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
