--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router": "^7.6.0",
     "react-router-dom": "^7.6.0",
     "react-scripts": "5.0.1",
+    "swiper": "^11.2.10",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "zustand": "^5.0.4"
